<resources>
    <string name="app_name">Luga Luga</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_senha">password</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="login">Login</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>

    <string name="tv_qtdProduto">10pc</string>
    <string name="btn_alugar">Alugar</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Luga Luga</string>
    <string name="nav_header_subtitle">lugaluga@lugaluga.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="text_welcome">Bem-vindo ao Luga-Luga   :)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_solicitacao">Solicitações</string>
    <string name="menu_acompanhamento">Acompanhamento</string>
    <string name="menu_atendimento">Atendimento</string>
    <string name="menu_sobrenos">Sobre Nós</string>
    <string name="menu_faleconosco">Fale Conosoco</string>
    <string name="menu_moreinfo">Mais informações</string>

</resources>