<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_produtos"
            android:title="@string/menu_produtos"/>
        <item
            android:id="@+id/nav_solitacao"
            android:icon="@drawable/ic_menu_solicitacoes"
            android:title="@string/menu_solicitacao"/>
        <item
            android:id="@+id/nav_acompanhamento"
            android:icon="@drawable/ic_menu_acompanhamento"
            android:title="@string/menu_acompanhamento"/>
        <item
            android:id="@+id/nav_atendimento"
            android:icon="@drawable/ic_menu_atendimento"
            android:title="@string/menu_atendimento"/>

    </group>
    <item
        android:title="@string/menu_moreinfo">
    <menu>
        <item
            android:id="@+id/nav_sobrenos"
            android:icon="@drawable/ic_menu_sobrenos"
            android:title="@string/menu_sobrenos"/>
        <item
            android:id="@+id/nav_faleconosco"
            android:icon="@drawable/ic_menu_faleconosco"
            android:title="@string/menu_faleconosco"/>
    </menu>
    </item>
</menu>